<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/box">

    <TextView
        android:id="@+id/txtType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/compType"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txtDes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtType"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/compDes"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edtDes1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtDes"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine" />

    <TextView
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtPrio"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/compName"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txtPrio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtDes1"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/compPrio1"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txtImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtName"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/compImage"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/imgComp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/txtImage"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:contentDescription="TODO"
        app:srcCompat="@mipmap/ic_launcher" />

    <EditText
        android:id="@+id/edtPrio1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/txtPrio"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@id/txtPrio"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/edtType1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/txtType"
        android:layout_marginLeft="100dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/edtName1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/txtName"
        android:layout_marginLeft="30dp"
        android:layout_toRightOf="@id/txtName"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="14sp" />
</RelativeLayout>